# docs/openapi3.yaml
@@ -347,6 +347,23 @@ components:
                     description: return information description
                     type: string
             type: object
+        types.GetAllStrategiesReply:
+            properties:
+                code:
+                    description: return code
+                    type: integer
+                data:
+                    description: return data
+                    properties:
+                        strategiess:
+                            items:
+                                $ref: '#/components/schemas/types.StrategiesObjDetail'
+                            type: array
+                    type: object
+                msg:
+                    description: return information description
+                    type: string
+            type: object
         types.GetSnapshotsByIDReply:
             properties:
                 code:
@@ -1289,6 +1306,21 @@ paths:
             security:
                 - BearerAuth: []
             summary: Update a strategies by id
+            tags:
+                - strategies
+    /api/v1/strategies/all:
+        get:
+            description: Returns a list of all strategies.
+            responses:
+                "200":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/types.GetAllStrategiesReply'
+                    description: OK
+            security:
+                - BearerAuth: []
+            summary: Get all strategiess
             tags:
                 - strategies
     /api/v1/strategies/list:
